zeit.cms changes
================

editor-ng branch changes
------------------------

- Fix genratting of tags (#12254)

- Fix autosaving of forms when user clicks on a DOM node inside the form
  container (#12211).

- Fix selecting of objects in reference dialog (#12102)

- Publish is not allowed in ILocalContent via the security machinery now (for
  #8413).

- Improved ObjectSequenceWidget so it became usable again.

- Added in-place add functionality to ObjectSequenceWidget (#8402).

- Included JQuery as well as MochiKit for the best of both worlds.

- Added a DAVConverterWrapper for XML properties to make it easy to use the
  DAV converter infrastructure with XML properties.

- Testing: HTTPLayer calls tearDown on the request handler during testTearDown
  now.

- ObjectSequenceWidget and DropObjectWidget don't accept any draggable anymore,
  they offer a parameter to configure the accept setting instead. Clipboard and
  zeit.find annotate their draggables with the content types (#9390).

- Introduce ValidateCheckinEvent (#9406).

- Introduce ICheckinCheckoutEvent.publishing (for #8996).

- Changed zeit.cms.browser.form.apply_default_values to not overwrite an
  objects's existing data attributes.

- DropObjectWidget raises ValidationError when the given uniqueId does not
  exist in the repository.

- In the ObjectSequenceWidget, placed the search field and add button above
  the list of sequence items (#10666).

- Introduce RestructuredTextWidget (#10661).

- Introduce IPublishInfo.date_last_published_semantic (#10704).

- Introduce zeit.workflow.publishinfo.PublishInfo as base class for workflows
  instead of NotPublishablePublishInfo (#10739).

- Remove XMLSnippet, its functionality is not used anymore.

- We need to use @@raw view to get the actual URL of images (#12159)  

1.53.5 (unreleased)
-------------------

- Fold IContentAdder and IAddLocation into zeit.cms from zeit.addcentral
  (for #10692).
