@@ -22,4 +22,12 @@ def objectify_soup_fromstring(text):
     # There once (r18370) was a properly integrated variant that avoided an
     # addtional serialize/deserialize cycle, but it did not understand
     # namespaces, and could not be taught easily either, so it had to go.
-    return lxml.objectify.fromstring(str(BeautifulSoup.BeautifulSoup(text)))
+    soup = BeautifulSoup.BeautifulSoup(text, convertEntities='html')
+    tags = [soup]
+    while tags:
+        tag = tags.pop()
+        tags.extend(tag.findChildren())
+        for i, (key, value) in enumerate(tag.attrs):
+            if value is None:  # Attribute w/o value, like <foo attr/>
+                tag.attrs[i] = (key, key)
+    return lxml.objectify.fromstring(str(soup))
